quick_tests/cases/pass/p54_var_decl_with_mismatched_type.webx
fn main() -> i32 { let x: i32 = 'hello'; return 0; }