quick_tests/cases/fail/f21_invalid_return_type_arrow.webx
fn main() -> 'abc' { return 0; }